--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bookstore-cms",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sboursen.github.io/BookstoreCMS/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
